--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,13 +53,15 @@
           android:layout_height="80dp"
           android:layout_gravity="center_horizontal"
           android:layout_marginTop="30dp"
-          android:text="简单的矩阵变换"/>
+          android:text="简单的矩阵变换" />
 
       <Button
+          android:id="@+id/btn_cube_activity"
           android:layout_width="200dp"
           android:layout_height="80dp"
           android:layout_gravity="center_horizontal"
-          android:layout_marginTop="30dp" />
+          android:layout_marginTop="30dp"
+          android:text="简单立方体" />
 
       <Button
           android:layout_width="200dp"
