--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,10 +64,12 @@
           android:text="简单立方体" />
 
       <Button
+          android:id="@+id/btn_camera_activity"
           android:layout_width="200dp"
           android:layout_height="80dp"
           android:layout_gravity="center_horizontal"
-          android:layout_marginTop="30dp" />
+          android:layout_marginTop="30dp"
+          android:text="Camera"/>
 
       <Button
           android:layout_width="200dp"
